Add description; add static helper in batches extension, fix migration

--- a/lib/generators/good_job/templates/install/migrations/create_good_jobs.rb.erb
+++ b/lib/generators/good_job/templates/install/migrations/create_good_jobs.rb.erb
@@ -26,7 +26,8 @@ class CreateGoodJobs < ActiveRecord::Migration<%= migration_version %>
 
     create_table :good_job_batches, id: :uuid do |t|
       t.timestamps
-      t.jsonb :serialized_params
+      t.text :description
+      t.jsonb :serialized_properties
       t.text :callback_job_class
       t.text :callback_queue_name
       t.integer :callback_priority
