--- a/app/views/good_job/shared/_navbar.erb
+++ b/app/views/good_job/shared/_navbar.erb
@@ -17,7 +17,7 @@
         <li class="nav-item">
           <%= link_to batches_path, class: ["nav-link", ("active" if controller_name == 'batches')] do %>
             <%= "Batches" %>
-            <% batches_count = GoodJob::Batch.all.size %>
+            <% batches_count = GoodJob::Batch.migrated? ? GoodJob::Batch.all.size : 0 %>
             <span class="badge bg-secondary rounded-pill"><%= batches_count %></span>
           <% end %>
         </li>
